2004-12-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (state_change):
	  GST_PAD_CAPS() will not work on ghostpads, which we're working on
	  here. So explicitely realize pad.

2004-12-03  Bastien Nocera  <hadess@hadess.net>

	* data/handlers.sh: add support for Winamp's uvox:// URLs

2004-12-01  Christophe Fergeau  <teuf@gnome.org>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_string): the year tag returns a
	guint, not a string.

2004-12-01  Bastien Nocera  <hadess@hadess.net>

	* configure.in: detect XVidModeExtension as well
	* src/Makefile.am: upd
	* src/bacon-resize.c: (bacon_resize_init), (bacon_resize),
	(bacon_restore):
	* src/bacon-resize.h:
	* src/bacon-video-widget-xine.c: (frame_output_cb),
	(bacon_video_widget_realize), (bacon_video_widget_set_fullscreen):
	Use XRandR and XVidModeExtension to get rid of the viewport when
	there is one (Closes: #129986)

2004-11-29  Bastien Nocera  <hadess@hadess.net>

	* data/totem.keys: added audio/mpegurl as a supported mime-type
	for the benefit of the Zina PHP engine

2004-11-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in: if xine-lib isn't available, automatically check
	for the GStreamer libraries instead of having to enable it
	(Closes: #159081)

2004-11-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/.cvsignore:
	* data/Makefile.am:
	* data/totem.desktop.in.in:
	* data/totem.desktop.in.in.in:
	* data/vanity.desktop.in:
	* data/vanity.desktop.in.in: add X-GNOME-Bugzilla-Version=@VERSION@
	to the desktop files (Closes: #159395)

2004-11-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* README:
	  Update TODO list somewhat.
	* src/bacon-video-widget-gst.c: (bacon_video_widget_dvd_event),
	(bacon_video_widget_can_play):
	  Add DVD. Add DVD events (even though they don't work yet, but
	  that's a GStreamer internal issue).

2004-11-26  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: