@@ -1,3 +1,8 @@
+2004-12-03  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-xine.c: (xine_event): change the cursor to
+	a hand when hovering a DVD menu (Closes: #160085)
+
 2004-12-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/bacon-video-widget-gst.c: (state_change):
